--- a/index.html
+++ b/index.html
@@ -58,6 +58,46 @@
           </form>
         </div>
       </div>
+      <!--Form that allows user to define a category and add sources  -->
+      <div class="row">
+        <div class="col-md-4">
+          <form id='new-category'>
+            <div class="form-group">
+              <input type="text" name="newCategory" id='category-name' placeholder="Category Name">
+              <button type="submit" id='add-category' class='btn btn-primary' data-toggle="modal" data-target="#sourceModal">Add Category</button>
+            </div>
+          </form>
+        </div>
+      </div>
+      <!--List of feeds to be added to category-->
+      <div id="sourceModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-body">
+              <form>
+                <div class="checkbox">
+                  <label><input type="checkbox" name="modal-source" value="">BBC</label>
+                </div>
+                <div class="checkbox">
+                  <label><input type="checkbox" name="modal-source" value="">Reuters</label>
+                </div>
+                <div class="checkbox">
+                  <label><input type="checkbox" name="modal-source" value="">CBC</label>
+                </div>
+                <div class="checkbox">
+                  <label><input type="checkbox" name="modal-source" value="">Independant</label>
+                </div>
+                <div class="checkbox">
+                  <label><input type="checkbox" name="modal-source" value="">New York Times</label>
+                </div>
+                  <div class="modal-footer">
+                    <button type="submit" class="btn btn-default" data-dismiss="modal">Add Feeds</button>
+                  </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
       <!-- content goes here -->
       <div class="row">
         <div class="col-md-4">
