--- a/index.html
+++ b/index.html
@@ -60,11 +60,14 @@
       </div>
       <!-- content goes here -->
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-3">
           <ul id="feed-list"></ul>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-4">
           <div class="rssfeed"></div>
+        </div>
+        <div class="col-md-5">
+          <div class="article-content"></div>
         </div>
       </div>
 
@@ -78,6 +81,7 @@
   <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   <script type="text/javascript" src="js/md5.js"></script>
+  <script type="text/javascript" src="js/app.js"></script>
   <script type="text/javascript" src="js/models.js"></script>
   <script type="text/javascript" src="js/views.js"></script>
   <script type="text/javascript" src="js/script.js"></script>
