--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Contacts</title>
+  <title>The Reader</title>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <!-- Optional theme -->
@@ -22,6 +22,13 @@
         </button>
         <a class="navbar-brand" href="index.html">FeedReader</a>
       </div>
+  <!-- player -->
+      <div class="player">
+        <audio controls>
+          <source src="sample.mp3" type="audio/mpeg">
+        </audio>
+      </div>
+  <!-- end player -->
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
         </ul>
