--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Contacts</title>
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-  <!-- Optional theme -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+  <title>Reader</title>
+  <link rel="stylesheet" href='css/bootstrap.min.css' type="text/css">
+  <link rel="stylesheet" href='css/bootstrap-theme.min.css' type="text/css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -58,28 +56,45 @@
           </form>
         </div>
       </div>
-      <!--Form that allows user to define a category and add sources  -->
-      <div class="row">
-        <div class="col-md-4">
-          <form id='new-category'>
-            <div class="form-group">
-              <input type="text" name="newCategory" id='category-name' placeholder="Category Name">
-              <button type="submit" id='add-category' class='btn btn-primary' data-toggle="modal" data-target="#sourceModal">Add Category</button>
+      <button type="button" class='btn btn-primary' data-toggle="modal" data-target="#categoryModal">Add a Category</button>
+      <!--Add new category modal-->
+      <div id="categoryModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-sm">
+          <div class="modal-content">
+            <div class="modal-body">
+              <form id='new-category'>
+                <div class="form-group">
+                  <input type="text" name="newCategory" id='category-name' placeholder="Category Name">
+                  <button type="submit" class='btn btn-primary'>Add Category</button>
+                </div>
+              </form>
             </div>
-          </form>
+          </div>
         </div>
       </div>
-      <!--List of feeds to be added to category-->
+      <button type="button" class='btn btn-primary' data-toggle="modal" data-target="#sourceModal">Add Source to a Category</button>
+      <!--Add Source to Category Modal-->
       <div id="sourceModal" class="modal fade" role="dialog">
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
             <div class="modal-body">
+              <!--Form that allows selectio of a defined category to add sources-->
               <form>
+                <select class="form-control" id='chooseCategory'>
+                  <option>News</option>
+                  <option>Tech</option>
+                  <option>Health</option>
+                  <option>Auto</option>
+                  <option>Aviation</option>
+                </select>
+              </form>
+              <!--List of feeds to be added to category-->
+              <form id='add-to-category'>
                 <div class="checkbox">
-                  <label><input type="checkbox" name="modal-source" value="">BBC</label>
+                  <label><input type="checkbox" name="modal-source" value="BBC">BBC</label>
                 </div>
                 <div class="checkbox">
-                  <label><input type="checkbox" name="modal-source" value="">Reuters</label>
+                  <label><input type="checkbox" name="modal-source" value="Reuters">Reuters</label>
                 </div>
                 <div class="checkbox">
                   <label><input type="checkbox" name="modal-source" value="">CBC</label>
@@ -91,7 +106,7 @@
                   <label><input type="checkbox" name="modal-source" value="">New York Times</label>
                 </div>
                   <div class="modal-footer">
-                    <button type="submit" class="btn btn-default" data-dismiss="modal">Add Feeds</button>
+                    <button type="submit" class="btn btn-default">Add Feeds</button>
                   </div>
               </form>
             </div>
@@ -113,10 +128,8 @@
   <footer class="footer">
 
   </footer>
-  <!-- javascript for speedier loading -->
-  <!-- Latest compiled and minified JavaScript -->
-  <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+  <script src="js/jquery-1.12.4.js" type='text/javascript'></script>
+  <script src="js/bootstrap.min.js" type='text/javascript'></script>
   <script type="text/javascript" src="js/md5.js"></script>
   <script type="text/javascript" src="js/models.js"></script>
   <script type="text/javascript" src="js/views.js"></script>
