--- a/index.html
+++ b/index.html
@@ -20,15 +20,8 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">FeedReader</a>
+        <a class="navbar-brand" href="index.html">The Reader</a>
       </div>
-  <!-- player -->
-      <div class="player">
-        <audio controls id="player">
-          <source src="sample.mp3" type="audio/mpeg">
-        </audio>
-      </div>
-  <!-- end player -->
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
         </ul>
