--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
                   <label><input type="checkbox" name="modal-source" value="Reuters">Reuters</label>
                 </div>
                 <div class="checkbox">
-                  <label><input type="checkbox" name="modal-source" value="">CBC</label>
+                  <label><input type="checkbox" name="modal-source" value="CBC">CBC</label>
                 </div>
                 <div class="checkbox">
-                  <label><input type="checkbox" name="modal-source" value="">Independant</label>
+                  <label><input type="checkbox" name="modal-source" value="Independant">Independant</label>
                 </div>
                 <div class="checkbox">
-                  <label><input type="checkbox" name="modal-source" value="">New York Times</label>
+                  <label><input type="checkbox" name="modal-source" value="New York Times">New York Times</label>
                 </div>
                   <div class="modal-footer">
                     <button type="submit" class="btn btn-default">Add Feeds</button>
