fix icon spacing issue

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <nav class="navbar navbar-fixed-top">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -60,13 +60,13 @@
       </div>
       <!-- content goes here -->
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-2">
           <ul id="feed-list"></ul>
         </div>
         <div class="col-md-4">
           <div class="rssfeed"></div>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-6">
           <div class="article-content"></div>
         </div>
       </div>
