--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
+    <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
           <span class="sr-only">Toggle navigation</span>
@@ -30,7 +30,7 @@
     </div>
   </nav>
   <div class="content">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-md-6">
           <div id="msg-box"></div>
@@ -61,13 +61,15 @@
       </div>
       <!-- content goes here -->
       <div class="row">
-        <div class="col-md-2">
+        <div class="col-md-2" id="sources">
           <ul id="feed-list"></ul>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4" id="titles">
+          <h2 id="source-name">
+          </h2>
           <div class="rssfeed"></div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6" id="articles">
           <div class="article-content"></div>
         </div>
       </div>
