--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>The Reader</title>
-  <!-- Latest compiled and minified CSS -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href='css/bootstrap.min.css' type="text/css">
   <link rel="stylesheet" href='css/bootstrap-theme.min.css' type="text/css">
@@ -14,70 +13,13 @@
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
         <a class="navbar-brand" href="index.html">The Reader</a>
+        <span class="glyphicon glyphicon-plus" id='plusIcon' data-toggle="modal" data-target="#modal"></span>
       </div>
-      <div id="navbar" class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-        </ul>
-      </div><!--/.nav-collapse -->
     </div>
   </nav>
   <div class="content">
     <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <div id="msg-box"></div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-        <button type="button" class='btn btn-primary' data-toggle="modal" data-target="#modal">Add</button>
-        </div>
-      </div>
-
-      <div id="modal" class="modal fade" role="dialog">
-        <div class="modal-dialog modal-md">
-          <div class="modal-content">
-            <div class="modal-body">
-
-                  <!--Form that allows selectio of a defined category to add sources-->
-                <form id="addFeed">
-                  <div class="row">
-                    <div class="col-md-4">
-                      <div class="form-group add-feed-fields">
-                        <input class="form-control" type="text" name="add-source-name" id="add-source-name" placeholder="Name">
-                      </div>
-                    </div>
-                    <div class="col-md-4">
-                      <div class="form-group add-feed-fields">
-                        <input class="form-control" type="text" name="add-feed-link" id="add-feed-link" placeholder="Link">
-                      </div>
-                    </div>
-                  </div>
-                  <select class="form-control" id='chooseCategory'>
-                    <option selected disabled>Choose a category</option>
-
-                  </select>
-                    <div class="form-group">
-                      <input class="form-control" type="text" name="newCategory" id='catName' placeholder="Category Name">
-                      <button type="button" id='catNameButton' class='btn btn-primary'>Add Category</button>
-                    </div>
-                  <div class="form-group">
-                    <button type="submit" id="add-feed-submit" class="btn btn-primary">Add it!</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                  </div>
-                </form>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- content goes here -->
       <div class="row">
         <div class="col-md-2">
           <ul id="feed-list"></ul>
@@ -89,18 +31,47 @@
           <div class="article-content"></div>
         </div>
       </div>
-
     </div>
   </div>
-  <footer class="footer">
-
-  </footer>
-  <script src="js/jquery-1.12.4.js" type='text/javascript'></script>
-  <script src="js/bootstrap.min.js" type='text/javascript'></script>
-  <script type="text/javascript" src="js/md5.js"></script>
-  <script type="text/javascript" src="js/app.js"></script>
-  <script type="text/javascript" src="js/models.js"></script>
-  <script type="text/javascript" src="js/views.js"></script>
-  <script type="text/javascript" src="js/script.js"></script>
+  <div id="modal" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-md">
+      <div class="modal-content">
+        <div class="modal-body">
+          <form id="addFeed">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="form-group add-feed-fields">
+                  <input class="form-control" type="text" name="add-source-name" id="add-source-name" placeholder="Name">
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="form-group add-feed-fields">
+                  <input class="form-control" type="text" name="add-feed-link" id="add-feed-link" placeholder="Link">
+                </div>
+              </div>
+            </div>
+            <select class="form-control" id='chooseCategory'>
+              <option selected disabled>Choose a category</option>
+            </select>
+              <div class="form-group">
+                <input class="form-control" type="text" name="newCategory" id='catName' placeholder="Category Name">
+                <button type="button" id='catNameButton' class='btn btn-primary'>Add Category</button>
+              </div>
+            <div class="form-group">
+              <button type="submit" id="add-feed-submit" class="btn btn-primary">Add it!</button>
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
+<script src="js/jquery-1.12.4.js" type='text/javascript'></script>
+<script src="js/bootstrap.min.js" type='text/javascript'></script>
+<script type="text/javascript" src="js/md5.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
+<script type="text/javascript" src="js/models.js"></script>
+<script type="text/javascript" src="js/views.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
 </html>
