--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href='css/bootstrap.min.css' type="text/css">
   <link rel="stylesheet" href='css/bootstrap-theme.min.css' type="text/css">
+  <link rel="stylesheet" href="css/bootstrap3_player.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
