fix js tooltip errors

--- a/index.html
+++ b/index.html
@@ -61,10 +61,12 @@
                       </div>
                     </div>
                   </div>
-                  <select class="form-control" id='chooseCategory'>
-                    <option selected disabled>Choose a category</option>
+                  <div class="form-group">
+                    <select class="form-control" id='chooseCategory'>
+                      <option selected disabled>Choose a category</option>
 
-                  </select>
+                    </select>
+                  </div>
                     <div class="form-group">
                       <input class="form-control" type="text" name="newCategory" id='catName' placeholder="Category Name">
                       <button type="button" id='catNameButton' class='btn btn-primary'>Add Category</button>
