--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 
                     </select>
                   </div>
-                    <div class="form-group">
-                      <input class="form-control" type="text" name="newCategory" id='catName' placeholder="Category Name">
-                      <button type="button" id='catNameButton' class='btn btn-primary'>Add Category</button>
-                    </div>
+                  <div class="form-group">
+                    <input class="form-control" type="text" name="newCategory" id='catName' placeholder="Category Name">
+                    <button type="button" id='catNameButton' class='btn btn-primary'>Add Category</button>
+                  </div>
                   <div class="form-group">
                     <button type="submit" id="add-feed-submit" class="btn btn-primary">Add it!</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -83,7 +83,7 @@
       <!-- content goes here -->
       <div class="row">
         <div class="col-md-2" id="sources">
-          <ul id="feed-list"></ul>
+          <div id="feed-list"></div>
         </div>
         <div class="col-md-4" id="titles">
           <h2 id="source-name">
