--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="modal-content">
         <div class="modal-body">
           <form id="addFeed">
-            <div class="form-inline">
+            <!-- <div class="form-inline">
               <div class="from-group">
                 <div class="input-group">
                   <input class="form-control" type="text" name="newCategory" id='catName' placeholder="Add a Category">
@@ -50,7 +50,7 @@
                   <option selected disabled>Choose a Category</option>
                 </select>
               </div>
-            </div>
+            </div> -->
             <div class="form-inline">
               <div class="form-group">
                 <input class="form-control add-feed-fields" type="text" name="add-source-name" id="add-source-name" placeholder="RSS Name">
